# agents-Morf

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_UPLOAD.md  INSTRUCCIONES_GITHUB_ES.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  docker-compose.phase1.yml  docker-compose.staging.yml  docker-compose.yml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/app/: api.py  cli.py  dependencies.py  main.py  models.py  schemas.py  worker.py
apps/backend/app/core/: config.py  database.py  security.py
apps/backend/app/data/: __init__.py  official_templates.py
apps/backend/app/routers/: __init__.py  agent_templates.py  agents.py  api_keys.py  auth.py  chat.py  conversations.py  dashboard.py  feedback.py  knowledge.py  members.py  memory.py  organizations.py  providers.py  tool_results.py  tools.py  training.py
apps/backend/app/services/: builtin_tools.py  document_loader.py  email.py  embeddings.py  hybrid_router.py  knowledge.py  memory.py  orchestrator.py  providers.py  quotas.py  remote_ssh.py  templates_seed.py  tools.py  vector_store.py  workspace_agent.py
apps/backend/tests/: test_agent_builder.py  test_core_services.py  test_health.py  test_hybrid_router.py  test_members_and_reset.py  test_quotas.py  test_registration.py  test_remote_ssh.py  test_studio_runtime.py  test_workspace_agent.py
docs/: AGENTS_MORF_TERMINAL.md  AGENT_BUILDER.md  AGENT_BUILDER_IMPLEMENTATION_REPORT.md  AGENT_TEMPLATES.md  AGENT_VERSIONING.md  API.md  ARCHITECTURE.md  CLIENT_TOOL_EXECUTION.md  DEPLOYMENT.md  HYBRID_MODEL_ROUTER.md  (+17 more)
(+22 files in other folders)
