[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents-morf-backend"
version = "0.1.0"
description = "Agents Morf FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.30,<1",
  "aiosqlite>=0.20,<1",
  "pydantic-settings>=2.6,<3",
  "email-validator>=2.2,<3",
  "PyJWT>=2.10,<3",
  "pwdlib[argon2]>=0.2,<1",
  "cryptography>=44,<46",
  "httpx>=0.28,<1",
  "redis>=5.2,<6",
  "python-multipart>=0.0.18,<1",
  "typer>=0.15,<1",
  "structlog>=24.4,<26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
